--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/CrystalClear/topics_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/CrystalClear/topics_list.html
@@ -52,7 +52,7 @@
 						</div>
 					</div>
 				</td>
-				<td class="tc2">{{ topic.topic_author }}</td>
+				<td class="tc2"><a href="/forum/show_profile/{{ topic.topic_author }}/">{{ topic.topic_author }}</a></td>
 				<td class="tc3">{{ topic.topic_posts }}</td>
 				<td class="tcr">{{ topic.topic_lastpost }}</td>
 			</tr>
