--- a/trunk/diamandas/wiki/templates/wiki/register.html
+++ b/trunk/diamandas/wiki/templates/wiki/register.html
@@ -11,7 +11,7 @@
 {% endif %}
 
 <form action="/wiki/register/" method="POST"><input type="hidden" value="{{ hash }}" name="imghash" />
-<div style="text-align:center;"><table class="historytable" cellspacing="0" cellpadding="0">
+<div style="text-align:center;"><table class="historytable" cellspacing="0" cellpadding="0" align="center">
 	<thead><tr>
 		<th class="title" width="50%"><div style="text-align:center;"><b>{% trans "REGISTER FORM" %}</b></div></th>
 		<th class="title"> </th>
