user host is no longer saved, fixed some forum user profile bugs

--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/CrystalClear/post_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/CrystalClear/post_list.html
@@ -44,7 +44,7 @@
 					<dt><strong><a href="/forum/show_profile/{{ i.post_author }}/">{{ i.post_author }}</a></strong></dt>
 					<dd>{{ i.post_date }}</dd>
 					{% if perms.is_staff %}
-						<dd>{{ i.post_ip }} - {{ i.post_host }}</dd>
+						<dd>{{ i.post_ip }}</dd>
 					{% endif %}
 				</dl>
 			</div>
