--- a/trunk/diamandas/wiki/templates/wiki/page_history_list.html
+++ b/trunk/diamandas/wiki/templates/wiki/page_history_list.html
@@ -16,8 +16,7 @@
 		<th> </th>
 		<th><div style="text-align:center;">{{ page.modification_date }}<br />{{ page.modification_user }}
 		{% if is_staff %}
-			<br /><br />{{ page.modification_ip }}<br />
-			{{ page.modification_host }}
+			<br /><br />{{ page.modification_ip }}
 		{% endif %}
 		</div></th>
 		<th>{{ page.changes }}</th>
