--- a/trunk/diamandas/wiki/templates/wiki/search.html
+++ b/trunk/diamandas/wiki/templates/wiki/search.html
@@ -11,7 +11,7 @@
 </div>
 
 {% if pages %}
-	{% if google %}
+	{% if googleuse %}
 		{% for page in pages %}
 		<img src="/site_media/wiki/img/2.png" alt="" /> <a href="{{ page.URL }}">{{ page.title }}</a><br />
 		{% endfor %}
