--- a/trunk/diamandas/wiki/templates/wiki/task_show.html
+++ b/trunk/diamandas/wiki/templates/wiki/task_show.html
@@ -31,7 +31,7 @@
 <tr>
 <td><div style="text-align:center;">{{ c.com_author }}</div></td>
 <td>{{ c.com_text }}</td>
-<td><div style="text-align:center;">{{ c.com_date }}<br />{{ c.com_ip }}<br />{{ c.com_host }}</div></td>
+<td><div style="text-align:center;">{{ c.com_date }}<br />{{ c.com_ip }}</div></td>
 </tr>
 {% endfor %}
 </table>
