--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/CrystalClear/show_profile.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/CrystalClear/show_profile.html
@@ -18,7 +18,8 @@
 			</div>
 		</div>
 	</td>
-	<td class="tc2" style="width:75%;"><a href="mailto:{{ profile.email }}">{{ profile.email }}</a></td>
+	<td class="tc2" style="width:75%;"><a href="mailto:{{ profile.email }}">{{ profile.email }}</a><br /><br />
+	<a href="/forum/pmessage/{{ profile.username }}/">{% trans "Send Message" %}</a></td>
 </tr>
 <tr>
 	<td class="tcl">
