--- a/trunk/diamandas/wiki/templates/wiki/users.html
+++ b/trunk/diamandas/wiki/templates/wiki/users.html
@@ -18,15 +18,18 @@
 	</tr></thead>
 	<tr>
 		<td class="title"><b>{% trans "Login" %}</b></td>
-		<td><div style="text-align:center;"><input type="text" size="20" name="login" /></div></td>
+		<td><div style="text-align:center;">{{ form.login }}
+    {% if form.login.errors %}<br />*** {{ form.login.errors|join:", " }}{% endif %}</div></td>
 	</tr>
 	<tr>
 		<td class="title"><b>{% trans "Password" %}</b></td>
-		<td><div style="text-align:center;"><input type="password" size="20" name="password" /></div></td>
+		<td><div style="text-align:center;">{{ form.password }}
+    {% if form.password.errors %}<br />*** {{ form.password.errors|join:", " }}{% endif %}</div></td>
 	</tr>
 	<tr>
 		<td class="title"><b>{% trans "Text from the image" %}</b><br />{% trans "(Use CAPITAL letters)" %}</td>
-		<td><div style="text-align:center;"><input type="text" size="20" name="imgtext" /><br /><img src="/site_media/bg2.jpg" alt="" /></div></td>
+		<td><div style="text-align:center;">{{ form.imgtext }}
+    {% if form.imgtext.errors %}<br />*** {{ form.imgtext.errors|join:", " }}{% endif %}<br /><img src="/site_media/bg2.jpg" alt="" /></div></td>
 	</tr>
 	</table>
 	<br /><input type="submit" value="{% trans "Login" %}" class="actiontable" />
