User forms use manipulators and validators part 2

--- a/trunk/diamandas/wiki/templates/wiki/register.html
+++ b/trunk/diamandas/wiki/templates/wiki/register.html
@@ -18,23 +18,28 @@
 	</tr></thead>
 	<tr>
 		<td class="title"><b>{% trans "Login" %}</b><br />{% trans "required, more than 3 chars<br />letters or numbers" %}</td>
-		<td><div style="text-align:center;"><input type="text" size="20" name="login" /></div></td>
+		<td><div style="text-align:center;">{{ form.login }}
+    {% if form.login.errors %}<br />*** {{ form.login.errors|join:", " }}{% endif %}</div></td>
 	</tr>
 	<tr>
 		<td class="title"><b>{% trans "Password" %}</b><br />{% trans "required, more than 4 chars<br />letters or numbers" %}</td>
-		<td><div style="text-align:center;"><input type="password" size="20" name="password1" /></div></td>
+		<td><div style="text-align:center;">{{ form.password1 }}
+    {% if form.password1.errors %}<br />*** {{ form.password1.errors|join:", " }}{% endif %}</div></td>
 	</tr>
 	<tr>
 		<td class="title"><b>{% trans "Password Again" %}</b><br />{% trans "required, enter the same password" %}</td>
-		<td><div style="text-align:center;"><input type="password" size="20" name="password2" /></div></td>
+		<td><div style="text-align:center;">{{ form.password2 }}
+    {% if form.password2.errors %}<br />*** {{ form.password2.errors|join:", " }}{% endif %}</div></td>
 	</tr>
 	<tr>
 		<td class="title"><b>{% trans "Email" %}</b><br />{% trans "required, your email addres" %}</td>
-		<td><div style="text-align:center;"><input type="text" size="20" name="email" /></div></td>
+		<td><div style="text-align:center;">{{ form.email }}
+    {% if form.email.errors %}<br />*** {{ form.email.errors|join:", " }}{% endif %}</div></td>
 	</tr>
 	<tr>
 		<td class="title"><b>{% trans "Text from the image" %}</b><br />{% trans "(Use CAPITAL letters)" %}</td>
-		<td><div style="text-align:center;"><input type="text" size="20" name="imgtext" /><br /><img src="/site_media/bg2.jpg" alt=""></div></td>
+		<td><div style="text-align:center;">{{ form.imgtext }}
+    {% if form.imgtext.errors %}<br />*** {{ form.imgtext.errors|join:", " }}{% endif %}<br /><img src="/site_media/bg2.jpg" alt=""></div></td>
 	</tr></table>
 
 <br /><input type="submit" value="{% trans "Register My" %}" class="actiontable"></div>
