--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/CrystalClear/login.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/CrystalClear/login.html
@@ -24,7 +24,8 @@
 			</div>
 		</div>
 	</td>
-	<td class="tc2" style="width:70%;"><input type="text" size="30" name="login" /></td>
+	<td class="tc2" style="width:70%;">{{ form.login }}
+    {% if form.login.errors %}<br />*** {{ form.login.errors|join:", " }}{% endif %}</td>
 </tr>
 <tr>
 	<td class="tcl">
@@ -34,7 +35,8 @@
 			</div>
 		</div>
 	</td>
-	<td class="tc2"><input type="password" size="30" name="password" /></td>
+	<td class="tc2">{{ form.password }}
+    {% if form.password.errors %}<br />*** {{ form.password.errors|join:", " }}{% endif %}</td>
 </tr>
 <tr>
 	<td class="tcl">
@@ -44,7 +46,8 @@
 			</div>
 		</div>
 	</td>
-	<td class="tc2"><input type="text" size="30" name="imgtext" /><br /><img src="/site_media/bg2.jpg" alt="" style="padding:4px;" /></td>
+	<td class="tc2">{{ form.imgtext }}
+    {% if form.imgtext.errors %}<br />*** {{ form.imgtext.errors|join:", " }}{% endif %}<br /><img src="/site_media/bg2.jpg" alt="" style="padding:4px;" /></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -52,6 +55,24 @@
 	<input type="button" value="{% trans "Register" %}" onclick="location.assign('/forum/register/');" /><br />
 	</div>
 	</form>
+{% else %}
+	<b>{% trans "Welcome" %} {{ user }}</b><br />
+	<br />
+	{% if current %}
+	{% trans "- You can set pages as current" %}<br />
+	{% else %}
+	{% trans "- You can't set pages as current" %}<br />
+	{% endif %}
+	{% if add %}
+	{% trans "- You can add pages" %}<br />
+	{% else %}
+	{% trans "- You can't add pages" %}<br />
+	{% endif %}
+	{% if edit %}
+	{% trans "- You can edit pages" %}<br />
+	{% else %}
+	{% trans "- You can't edit pages" %}<br />
+	{% endif %}
 {% endif %}
 			
 		
