templates unification part 2

--- a/trunk/diamandas/wiki/templates/wiki/add.html
+++ b/trunk/diamandas/wiki/templates/wiki/add.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% load cbc %}
-{% extends "body.html" %}
+{% extends "wiki/body.html" %}
 {% block content %}
 
 <h2 class="pageh">{% trans "Add a Page" %}</h2><br />
