--- a/trunk/diamandas/wiki/templates/wiki/indexPage.html
+++ b/trunk/diamandas/wiki/templates/wiki/indexPage.html
@@ -1,16 +1,13 @@
 {% load i18n %}
 {% load cbc %}
-{% extends "body.html" %}
+{% extends "wiki/body.html" %}
 
 {% block leftmenu %}
-<li><a href="/wiki/edit/{{ page.slug }}/">{% trans "Edit" %}</a></li>
-<li><a href="/wiki/history/{{ page.slug }}/">{% trans "Page History" %}</a></li>
-<li><a href="/wiki/add/">{% trans "Add a Page" %}</a></li>
-{% if pdf %}
-<li><a href="/wiki/pdf/{{ page.slug }}/">{% trans "Save as PDF" %}</a></li>
+ <a href="/wiki/edit/{{ page.slug }}/">{% trans "Edit" %}</a> | <a href="/wiki/history/{{ page.slug }}/">{% trans "Page History" %}</a> | <a href="/wiki/add/">{% trans "Add a Page" %}</a>
+ {% if pdf %}
+ | <a href="/wiki/pdf/{{ page.slug }}/">{% trans "Save as PDF" %}</a>
 {% endif %}
-<li><a onclick="window.print();">{% trans "Print Page" %}</a></li>
-<li><a href="/wiki/sitemap.xml">{% trans "sitemap.xml" %}</a></li>
+ | <a onclick="window.print();">{% trans "Print Page" %}</a> | <a href="/wiki/sitemap.xml">{% trans "sitemap.xml" %}</a>
 {% endblock %}
 
 {% block header %}
