--- a/trunk/diamandas/wiki/templates/wiki/task_list.html
+++ b/trunk/diamandas/wiki/templates/wiki/task_list.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% extends "body.html" %}
+{% extends "wiki/body.html" %}
 {% block content %}
 {% if object_list %}
 <h2 class="pageh">{% trans "Site Tasks" %}</h2><br />
