--- a/trunk/diamandas/wiki/templates/wiki/task_show.html
+++ b/trunk/diamandas/wiki/templates/wiki/task_show.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% extends "body.html" %}
+{% extends "wiki/body.html" %}
 {% block title %}{{ task.task_name }}{% endblock %}
 {% block header %}
 {{ task.task_name }}
