--- a/trunk/diamandas/wiki/templates/wiki/diff.html
+++ b/trunk/diamandas/wiki/templates/wiki/diff.html
@@ -1,10 +1,6 @@
 {% load i18n %}
-{% extends "body.html" %}
-{% block leftmenu %}
-<li><a href="/wiki/edit/{{ slug }}/">{% trans "Edit" %}</a></li>
-<li><a href="/wiki/history/{{ slug }}/">{% trans "Page History" %}</a></li>
-<li><a href="/wiki/add/">{% trans "Add a Page" %}</a></li>
-{% endblock %}
+{% extends "wiki/body.html" %}
+{% block leftmenu %} <a href="/wiki/edit/{{ slug }}/">{% trans "Edit" %}</a> | <a href="/wiki/history/{{ slug }}/">{% trans "Page History" %}</a> | <a href="/wiki/add/">{% trans "Add a Page" %}</a>{% endblock %}
 
 
 {% block content %}
